--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gridfs-stream": "^1.1.1",
     "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.3.0",
     "mongoose": "^7.0.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
@@ -17,11 +18,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "irfan-fauzi",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "eslint": "^8.39.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5"
+  }
 }
