--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URL='mongodb+srv://irfan:sejak1992@mern-2023-devroh.iyxkc0t.mongodb.net/?retryWrites=true&w=majorit'
+JWT_SECRET='passwordrahasia'
 PORT=3001
